[3.2.1]
- fixed translate method in graphics plugin
- added project and unproject method to graphics plugin
- now logging functions do not return values (was returning always NULL)
- removed warning logging level
- error logging level do not force quit application
- tweaked default log messages a bit
- added setting for log level to non.cfg
- fixed networking (removed threading)
- fixed desktop:run task from CLI
- now update task from CLI properly clears unused plugins and languages
- plugin loader now uses reflection and not initializer class what was generated by gradle
- because of above update, moved all internal plugins from "non.plugins.internal" to "non.plugins" package
- added checks for missing configurations from non.cfg
- added checks for missing resources
- added checks for missing plugins

[3.2.0]
- revamped Non launcher, now only non.jar is required (this also changed some commands, so please read again the Wiki)
- fixed bug what caused that mobile devices thought that all apps made by non are same (so when you tried to install 2 different Non projects on your device, second one simply replaced first one)
- added "package" property to non.cfg
- added sqrt() to math plugin
- added pow() to math plugin

[3.1.0]
- added non.buffer what can be used for reading and writing data to and from byte array
- added checks for not existing functions to scripting
- added more features to math plugin
- added get() method to scripting
- revamped physics plugin
- removed "raw" argument for loading assets, now it is automatically determined if file should be loaded directly or via asset loader
- removed init() method from scripting
- replaced hacky networking with KryoNet (still WIP, some threading issues with scripting)

[3.0.0]
- added drawing of various shapes to graphics plugin
- added new method to graphics plugin for drawing formatted text (printf)
- added new method to graphics plugin for drawing texture quad (drawq)