@@ -1,21 +1,21 @@
-![logo](https://raw.githubusercontent.com/codeindie/non/master/src/gen/res/loading.png)
+![logo](https://raw.githubusercontent.com/non-dev/non/master/src/gen/res/loading.png)
 
 Non is a cross-platform game and visualization development engine. It currently supports Windows, Linux, Mac OS X, Android and iOS as target platforms.
 
 ### Getting Started ###
-  * [Introduction](https://github.com/codeindie/non/wiki/Introduction)
-  * [Create your first Non project](https://github.com/codeindie/non/wiki/Getting-started)
-    * [Run, Manage and Package your project]( https://github.com/codeindie/non/wiki/Non-CLI)
-  * [Read the Wiki](https://github.com/codeindie/non/wiki)
+  * [Introduction](https://github.com/non-dev/non/wiki/Introduction)
+  * [Create your first Non project](https://github.com/non-dev/non/wiki/Getting-started)
+    * [Run, Manage and Package your project]( https://github.com/non-dev/non/wiki/Non-CLI)
+  * [Read the Wiki](https://github.com/non-dev/non/wiki)
 
 ### Downloads ###
 
-You can get Non from the [IndieDB](http://indiedb.com/engines/no-nonsense/downloads) or here from GitHub [releases](http://github.com/codeindie/non/releases) page.
+You can get Non from the [IndieDB](http://indiedb.com/engines/no-nonsense/downloads) or here from GitHub [releases](http://github.com/non-dev/non/releases) page.
 
 ### Documentation ###
 
-The [Wiki](https://github.com/codeindie/non/wiki) contains all the information you'll need to write a Non game. You can contribute to the Wiki directly here on GitHub!
+The [Wiki](https://github.com/non-dev/non/wiki) contains all the information you'll need to write a Non game. You can contribute to the Wiki directly here on GitHub!
 
 ### Reporting Issues ###
 
-Use the [issue tracker](https://github.com/codeindie/non/issues) here on GitHub to report issues.
+Use the [issue tracker](https://github.com/non-dev/non/issues) here on GitHub to report issues.
