@@ -1,4 +1,6 @@
 [3.2.1]
+- simplified logging of non.jar CLI
+- added support for multi-threading for JavaScript, not yet working on Lua
 - fixed translate method in graphics plugin
 - added project and unproject method to graphics plugin
 - now logging functions do not return values (was returning always NULL)
@@ -6,8 +8,8 @@
 - error logging level do not force quit application
 - tweaked default log messages a bit
 - added setting for log level to non.cfg
-- fixed networking (removed threading)
-- fixed desktop:run task from CLI
+- fixed networking
+- semi-fixed desktop:run task from CLI (still failing to load resources)
 - now update task from CLI properly clears unused plugins and languages
 - plugin loader now uses reflection and not initializer class what was generated by gradle
 - because of above update, moved all internal plugins from "non.plugins.internal" to "non.plugins" package
